# eei

./: .gitignore  CMakeLists.txt  INSTALL  README.md  debug.sh  install.sh  test-install.sh  test.sh
.github/workflows/: build.yaml
apps/: CMakeLists.txt  eei.xml.in  engine.c  main.c
src/: CMakeLists.txt  eei.xml.in  engine.c  engine.h  main.c  predict.h
src/predict/: .gitignore  Cargo.toml  custom_shortcodes.tsv  dictionary.fst  math_whitelist.txt  shortcodes.fst
src/predict/ibus/: Cargo.toml  build.rs
src/predict/ibus/src/: lib.rs
src/predict/lib/: Cargo.toml  build.rs  cbindgen.toml
src/predict/lib/src/: lib.rs  main.rs  predict.rs
src/predict/preproc/: Cargo.toml
src/predict/preproc/src/: main.rs
src/predict/src/: lib.rs
tests/: CMakeLists.txt
