[package]
name = "predict"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["staticlib"] # Creates static lib

[dependencies]
ibus = { path = "../ibus" }
fst = { version = "0.4.7", features = ["levenshtein"] }
bincode = "1.3.3"
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = "1.0.0"

[build-dependencies]
cbindgen = "0.27.0"
